[tool.poetry]
name = "persim"
version = "0.1.2"
description = ""
authors = [ "Nathaniel Saul <nat@riverasaul.com>" , "Chris Tralie <chris.talie@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = ">=1.18.1"
pandas = ">=1.0.1"
scikit-learn = ">=0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
